--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     justify-content: center;
 }
 .container{
-    width: 80vh;
+    width: 100%;
     aspect-ratio: 1 / 1;
 
     position:fixed;
@@ -16,6 +16,9 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+.images{
+    width: 90%;
 }
 .board{
     width: 90%;
