--- a/style-v1_0_2.css
+++ b/style-v1_0_2.css
@@ -5,7 +5,7 @@ body{
     justify-content: center;
 }
 .container{
-    width: 100%;
+    height:  100%;
     aspect-ratio: 1 / 1;
 
     position:fixed;
@@ -16,6 +16,16 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+@media screen and (max-width: 850px) {
+.container{
+    width:  100%;
+    aspect-ratio: 1 / 1;
+    justify-content: start;
+}
+.board{
+    margin-top: 50px;
+}
 }
 .images{
     width: 90%;
